Bug 272647 - [Remote Inspection] Targeting incorrectly prefers pseudos over targets that contain their hosts
Summary: [Remote Inspection] Targeting incorrectly prefers pseudos over targets that c...
Status: RESOLVED FIXED
Alias: None
Product: WebKit
Classification: Unclassified
Component: Platform (show other bugs)
Version: WebKit Nightly Build
Hardware: Unspecified Unspecified
: P2 Normal
Assignee: Wenson Hsieh
URL:
Keywords: InRadar
Depends on:
Blocks:
 
Reported: 2024-04-14 11:02 PDT by Wenson Hsieh
Modified: 2024-04-14 15:06 PDT (History)
1 user (show)

See Also:


Attachments

Note You need to log in before you can comment on or make changes to this bug.
Description Wenson Hsieh 2024-04-14 11:02:02 PDT
rdar://126299041
Comment 1 Wenson Hsieh 2024-04-14 11:07:31 PDT
Pull request: https://github.com/WebKit/WebKit/pull/27235
Comment 2 EWS 2024-04-14 15:06:36 PDT
Committed 277475@main (52af773ed3ae): <https://commits.webkit.org/277475@main>

Reviewed commits have been landed. Closing PR #27235 and removing active labels.