[Remote Inspection] Targeting incorrectly prefers pseudos over targets that contain their hosts https://bugs.webkit.org/show_bug.cgi?id=272647 rdar://126299041

Reviewed by Abrar Rahman Protyasha.

When a candidate is chosen as a target, logic in the while loop in `findTargets` filters out other
candidate elements that are redundant, due to being contained within the newly chosen target.
However, this logic doesn't currently handle pseudo elements correctly, which means that front-most
pseudo elements are surfaced as higher-priority targets, even though another container element
enclosing them has already been chosen.

Fix this by augmenting the check to omit pseudo element candidates if their host element is
contained within the newly chosen target.

* LayoutTests/fast/element-targeting/target-container-with-pseudo-elements-expected.txt: Added.
* LayoutTests/fast/element-targeting/target-container-with-pseudo-elements.html: Added.
* Source/WebCore/page/ElementTargetingController.cpp:
(WebCore::ElementTargetingController::findTargets):

Canonical link: https://commits.webkit.org/277475@main